base/builds/regulus/argocd/projects/hometheatre/manifests/sonarranime/Service-sonarranime.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarranime
  namespace: sonarranime
spec:
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: 8989
  selector:
    app.kubernetes.io/instance: sonarranime
    app.kubernetes.io/name: sonarranime
  type: ClusterIP
