base/builds/regulus/argocd/projects/hometheatre/manifests/sonarranime/HTTPRoute-sonarr-anime.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarranime
  namespace: sonarranime
spec:
  hostnames:
  - sonarr-anime.apps.phalnet.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-ingress
    namespace: default
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: sonarranime
      port: 8989
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
